src/app/login/login.component.scss
@media (max-width: 720px) {
  .logo-section {
    display: flex;
    width: 100%;
    height: 145px;
    font-size: 40px;
    background: linear-gradient(to right, #ec4899, #6366f1);
  }

  .form-section {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
  }

  .login-container, .login-box {
    display: flex;
    flex-direction: column;
    height: 90vh;
    width: 100%;
  }

  .login-box {
    border: none;
  }




}

